--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>M.A.S.H.</title>
 </head>
 <body>
-	<p id="story"></p>
+	<div id="story"></div>
 	<script src="index.js"></script>
 </body>
 </html>
